tema-7/leccion-5/application/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: testing
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: "gcr.io/google-samples/hello-app:2.0"
        ports:
        - containerPort: 8080
