tema-7/leccion-5/application/service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: demo
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
