tema-7/leccion-5/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: testing
spec:
  ingressClassName: nginx
  rules:
  - host: "curso-k8s.ddns.net"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello-service
              port:
                number: 80
